# Cpp_pool_2021

B-CPP-300-STG-3-1-CPPD01-auguste.thomann/: Makefile
B-CPP-300-STG-3-1-CPPD01-auguste.thomann/ex00/: Makefile  z.c
B-CPP-300-STG-3-1-CPPD01-auguste.thomann/ex01/: Makefile  main.c  menger.c  menger.h
B-CPP-300-STG-3-1-CPPD01-auguste.thomann/ex02/: bitmap.h  bitmap_header.c  main.c
B-CPP-300-STG-3-1-CPPD01-auguste.thomann/ex03/: Makefile  pyramid.c
B-CPP-300-STG-3-1-CPPD03-auguste.thomann/: Makefile  ex00.c  ex01.c  ex02.c  ex03.c  ex04.c  ex05.c  ex06.c  ex07.c  ex08.c  ex09.c  ex10.c  ex11.c  ex12.c  ex13.c  ex14.c  ex15.c  ex16.c  string.h
B-CPP-300-STG-3-1-CPPD06-auguste.thomann/ex00/: Makefile  main.cpp
B-CPP-300-STG-3-1-CPPD06-auguste.thomann/ex01/: Makefile  my_convert_temp.cpp
B-CPP-300-STG-3-1-CPPD06-auguste.thomann/hospital/: KoalaDoctor.cpp  KoalaDoctor.hpp  KoalaNurse.cpp  KoalaNurse.hpp  Makefile  SickKoala.cpp  SickKoala.hpp  main.cpp
B-CPP-300-STG-3-1-CPPD08-auguste.thomann/ex00/: Droid.cpp  Makefile  main.cpp
B-CPP-300-STG-3-1-CPPD08-auguste.thomann/ex01/: Droid.hpp  DroidMemory.cpp  DroidMemory.hpp  Makefile  main.cpp
B-CPP-300-STG-3-1-CPPD09-auguste.thomann/: Character.cpp  Character.hpp  Mage.cpp  Mage.hpp  Makefile  Paladin.cpp  Paladin.hpp  Priest.cpp  Priest.hpp  Warrior.cpp  Warrior.hpp  ex00.c  ex00.h
B-CPP-300-STG-3-1-CPPD10-auguste.thomann/ex00/: Makefile  Peon.cpp  Peon.hpp  Sorcerer.cpp  Sorcerer.hpp  Victim.cpp  main.cpp  (+1 more)
B-CPP-300-STG-3-1-CPPrush1/: CMakeLists.txt  array.c  char.c  float.c  new.c  point.c  test.c  test.h
(+177 files in other folders)
