cmake_minimum_required(VERSION 3.17)
project(B_CPP_300_STG_3_1_CPPrush1_antony_fantapie C)

set(CMAKE_C_STANDARD 11)

include_directories(.)

add_executable(B_CPP_300_STG_3_1_CPPrush1_antony_fantapie
        array.c
        array.h
        char.c
        char.h
        container.h
        ex01.c
        ex02.c
        ex03.c
        ex05.c
        float.c
        float.h
        int.c
        int.h
        iterator.h
        new.c
        new.h
        object.h
        player.c
        player.h
        point.c
        point.h
        raise.h
        vertex.c
        vertex.h
        test.c test.h)
